# SerialTempSens-FW

./: .clang-format  README.md  west.yml
.github/workflows/: build.yml  release.yml
app/: CMakeLists.txt  Kconfig  Kconfig.MessageChannel  Kconfig.SensorService  debug.conf  nucleo_l432kc.overlay  prj.conf  sample.yaml
app/include/: FramedWriteBuffer.hpp  Framer.hpp  MessageChannel.hpp  SensorService.hpp  Uart.hpp  UartReceiveBuffer.hpp  WriteBuffer.hpp
app/src/: SensorService.cpp  main.cpp
boards/arm/serial_temp_sens/: Kconfig.board  Kconfig.defconfig  README.md  board.cmake  serial_temp_sens.dts  serial_temp_sens.yaml  serial_temp_sens_defconfig
lib/: CMakeLists.txt  Kconfig
lib/EmbeddedProto/: CMakeLists.txt  Kconfig
lib/myLib/: CMakeLists.txt  Kconfig
lib/myLib/include/myLib/: Framer.hpp  Mutex.hpp  RingBuffer.hpp  Semaphore.hpp  Spinlock.hpp  Uart.hpp
proto/: SerialTempSens_messages.proto
tests/app/MessageChannel/: CMakeLists.txt  prj.conf
tests/app/MessageChannel/src/: FramedWriteBuffer.cpp  FramerTests.cpp
tests/app/SensorService/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/app/SensorService/boards/: native_posix.overlay
tests/app/SensorService/src/: SensorServiceTests.cpp
tests/app/UartReceiveBuffer/: CMakeLists.txt  prj.conf  testcase.yaml
tests/app/UartReceiveBuffer/src/: UartReceiveBufferTests.cpp
tests/lib/myLib/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/myLib/src/: FramerTests.cpp  RingBuffertTests.cpp
